--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPA_NYC_df.to_csv('data/EPA_NYC_out.csv', index=False)"
+    "EPA_NYC_df.to_csv('github_data/EPA_NYC_out.csv', index=False)"
    ]
   },
   {
@@ -318,26 +318,6 @@
    "source": [
     "print(EPA_NYC_df['TRACTCE'])\n",
     "print(NYC_tracts_df['BoroCT2020'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Next Step: Data visualizations and statistics\n",
-    "1: pick features we wanna examine (mainly from EPA dataset)\n",
-    "2: group by the 2167 census tracts\n",
-    "    - figure out how to merge certain data when grouping (mean, median, max)\n",
-    "3: regression, clustering, pca, correlations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grouping by census tract\n"
    ]
   }
  ],
