Pushing new code

--- a/data_cleaning_SDOH.ipynb
+++ b/data_cleaning_SDOH.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -176,14 +176,21 @@
       " 'No high school diploma among adults aged 25 years or older'\n",
       " 'Persons living below 150% of the poverty level'\n",
       " 'No broadband internet subscription among households'\n",
-      " 'Single-parent households' 'Housing cost burden among households']\n"
+      " 'Single-parent households' 'Housing cost burden among households']\n",
+      "['CROWD' 'REMNRTY' 'AGE65' 'UNEMP' 'NOHSDP' 'POV150' 'BROAD' 'SNGPNT'\n",
+      " 'HCOST']\n",
+      "2227\n"
      ]
     }
    ],
    "source": [
     "print(len(SDOH_NYC_df))\n",
     "unique_measurements = SDOH_NYC_df['Measure'].unique()\n",
-    "print(unique_measurements)"
+    "print(unique_measurements)\n",
+    "unique_measurements = SDOH_NYC_df['MeasureID'].unique()\n",
+    "print(unique_measurements)\n",
+    "unique_groups = SDOH_NYC_df.groupby(['LocationName']).ngroups\n",
+    "print(unique_groups)"
    ]
   },
   {
@@ -227,9 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2227\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(pivot_df))"
    ]
