--- a/extract_data.ipynb
+++ b/extract_data.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "4    36    005  017902           2  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "4           2  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "6497"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
        "4           2       0.079341  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,20 +627,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census_df['Median Gross Rent'] = pd.to_numeric(census_df['Median Gross Rent'], errors='coerce')\n",
+    "census_df['Median Age'] = pd.to_numeric(census_df['Median Age'], errors='coerce')\n",
+    "\n",
+    "census_df.loc[census_df['Median Gross Rent'] < 0, 'Median Gross Rent'] = np.nan\n",
+    "census_df.loc[census_df['Median Age'] < 0, 'Median Age'] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows with 0 in 'Median household income': 672\n"
+      "Number of rows with NaN in 'Median household income': 0\n"
      ]
     }
    ],
    "source": [
-    "zero_count = census_df['Median household income'].value_counts().get(0, 0)\n",
-    "print(f\"Number of rows with 0 in 'Median household income': {zero_count}\")"
+    "zero_count = census_df['Median household income'].value_counts().get(np.nan, 0)\n",
+    "print(f\"Number of rows with NaN in 'Median household income': {zero_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Population</th>\n",
+       "      <th>Median household income</th>\n",
+       "      <th>Disability Population</th>\n",
+       "      <th>Median Gross Rent</th>\n",
+       "      <th>Median Age</th>\n",
+       "      <th>White Population</th>\n",
+       "      <th>state</th>\n",
+       "      <th>county</th>\n",
+       "      <th>tract</th>\n",
+       "      <th>block group</th>\n",
+       "      <th>Percent White</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1016.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>432.0</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>005</td>\n",
+       "      <td>006900</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.039370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>712.0</td>\n",
+       "      <td>67072.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1593.0</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>005</td>\n",
+       "      <td>041800</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.060393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>978.0</td>\n",
+       "      <td>74722.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1628.0</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>514.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>005</td>\n",
+       "      <td>016200</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.525562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2399.0</td>\n",
+       "      <td>13783.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>005</td>\n",
+       "      <td>020501</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.071697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>668.0</td>\n",
+       "      <td>20139.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1108.0</td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>005</td>\n",
+       "      <td>017902</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.079341</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Population  Median household income Disability Population  \\\n",
+       "0            1016.0                      NaN                   NaN   \n",
+       "1             712.0                  67072.0                   NaN   \n",
+       "2             978.0                  74722.0                   NaN   \n",
+       "3            2399.0                  13783.0                   NaN   \n",
+       "4             668.0                  20139.0                   NaN   \n",
+       "\n",
+       "   Median Gross Rent  Median Age  White Population state county   tract  \\\n",
+       "0              432.0        30.8              40.0    36    005  006900   \n",
+       "1             1593.0        42.1              43.0    36    005  041800   \n",
+       "2             1628.0        37.5             514.0    36    005  016200   \n",
+       "3              435.0        37.2             172.0    36    005  020501   \n",
+       "4             1108.0        26.9              53.0    36    005  017902   \n",
+       "\n",
+       "  block group  Percent White  \n",
+       "0           3       0.039370  \n",
+       "1           1       0.060393  \n",
+       "2           2       0.525562  \n",
+       "3           2       0.071697  \n",
+       "4           2       0.079341  "
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "census_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census_df = census_df.drop(columns=['Disability Population', 'White Population'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census_df.to_csv('census_data_cbg_clean.csv', index=False)"
    ]
   }
  ],
