Pushing merging code and analysis code

--- a/data_examination_EPA_NYC.ipynb
+++ b/data_examination_EPA_NYC.ipynb
@@ -345,10 +345,10 @@
    "metadata": {},
    "source": [
     "## Next Step: Data visualizations and statistics\n",
-    "- 1: pick features we wanna examine (mainly from EPA dataset)\n",
-    "- 2: group by the 2167 census tracts (or not, can currently keep as 2018 census block group)\n",
+    "- 1: pick features we wanna examine (mainly from EPA dataset) - DONE\n",
+    "- 2: group by the 2167 census tracts (or not, can currently keep as 2018 census block group) - Probably unnecessary\n",
     "    - figure out how to merge certain data when grouping (mean, median, max)\n",
-    "- 3: regression, clustering, pca, correlations, etc."
+    "- 3: regression, clustering, pca, correlations, etc. - See other notebooks for this"
    ]
   },
   {
