--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -79,6 +79,13 @@
     "\n",
     "# Optionally, examine the PCA and GMM performance further, or adjust the number of GMM components\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TODO: Experiment with more clustering"
+   ]
   }
  ],
  "metadata": {
